--- a/app_server/views/exercise-info.pug
+++ b/app_server/views/exercise-info.pug
@@ -17,4 +17,4 @@ block content
             h4.card-title.mt-3.mb-0 Description
             .card
               .card-body
-                p= exercise.desc
+                p!= exercise.desc
