--- a/app_server/views/personal-info.pug
+++ b/app_server/views/personal-info.pug
@@ -105,4 +105,4 @@ block content
         - if (changes == "false")
           .alert.alert-warning(role="alert")="No updates made"
 block scripts
-  script(src='/javascripts/personal-info.js')
+  script(src="/javascripts/personal-info.js")
