--- a/app_server/views/qnr-end.pug
+++ b/app_server/views/qnr-end.pug
@@ -10,11 +10,11 @@ block content
 
       //- Choices
     .row.justify-content-center.mb-5
-      a.option.btn.btn-lg.qnr-btn.mx-5(href='dashboard/calendar')= recommended_program
-      a.option.btn.btn-lg.qnr-btn.mx-5(href='program-list') See All Programs
+      a.option.btn.btn-lg.qnr-btn.mx-5(href="dashboard/calendar")= recommended_program
+      a.option.btn.btn-lg.qnr-btn.mx-5(href="program-list") See All Programs
 
     //- Prev/Next Btns
     .row
-      a.col-4.btn.qnr-nav-btn(href='qnr3') Previous
+      a.col-4.btn.qnr-nav-btn(href="qnr3") Previous
 block scripts
-  script(src='/javascripts/questionnaire.js')
+  script(src="/javascripts/questionnaire.js")
