--- a/app_server/views/questionnaire.pug
+++ b/app_server/views/questionnaire.pug
@@ -21,4 +21,4 @@ block content
       a.col-4.btn.qnr-nav-btn(href=prev) Previous
       a.col-4#nav-btn-right.btn.qnr-nav-btn(href=next) Next
 block scripts
-  script(src='/javascripts/questionnaire.js')
+  script(src="/javascripts/questionnaire.js")
