--- a/app_server/views/program-list.pug
+++ b/app_server/views/program-list.pug
@@ -7,4 +7,4 @@ block content
       .col-12.col-md-4
         each program in programs
           #program-list.card.text-center
-            a.btn.btn-default(href='/dashboard/calendar')= program
+            a.btn.btn-default(href="/dashboard/calendar")= program
