--- a/app_server/views/intro.pug
+++ b/app_server/views/intro.pug
@@ -8,5 +8,5 @@ block content
         p#IntroMsg.text-justify= introMsg
     .row.mt-5
       .col.text-center
-        a.button.btn.btn-default.btn-lg.my-2.p-3(href="/qnr1") Find your workout program
+        a.button.btn.btn-default.btn-lg.my-2.p-3(href="/questionnaire") Find your workout program
         a.button.btn.btn-default.btn-lg.my-2.p-3(href="/program-list") See all programs
