--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -14,7 +14,6 @@ html
         a#home.navbar-brand.btn.btn-default(href="/") home
         button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation")
           span.navbar-toggler-icon
-
       .container
         #navbarToggle.navbar-collapse.collapse
           ul.navbar-nav.center.ml-auto
@@ -27,16 +26,17 @@ html
                   a.nav-link.btn.btn-default(href="/register-form") Register
             - else
                 li.nav-item
+                  a.nav-link.btn.btn-default(href="/dashboard/calendar") Calendar
+                li.nav-item
                   a.nav-link.btn.btn-default(href="/dashboard/") Dashboard
                 li.nav-item
+                  a.nav-link.btn.btn-default(href="/dashboard/account") Account
+                li.nav-item
                   a#logout-btn.nav-link.btn.btn-danger(href="/logout") Logout
-
     block content
-
     footer.footer.fixed-bottom.d-none.d-md-block
       .text-center
         small &copy; Copyright QuickFit 2020
-
     script(src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous")
     script(src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous")
     script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous")
