--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -347,7 +347,7 @@ a.exercise:hover {
   color: #000;
 }
 
-.qnr-btn:focus {
+.option-selected {
   background-color: var(--portal-orange-dark);
   font-weight: bold;
   color: #000;
